<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleLayout</string>
    <string name="shop_name">Плюшевые игрушки</string>
    <string name="reviews">Отзывов нет</string>
    <string name="time_to_go">5 мин.</string>

    <string name="building_type">Магазин</string>
    <string name="work_hours">8-00 - 20-00</string>
    <string name="address">г. Воронеж, ул. Университетская площадь, 1, 394006</string>

    <string name="action_call">Позвонить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_share">Поделиться</string>

</resources>
