<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">


    <LinearLayout
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:id="@+id/shop_name"
                    android:text="@string/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:textSize="25sp"
                />
            <TextView
                android:id="@+id/reviews"
                android:text="@string/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shop_name"
                android:textSize="18sp"
                android:textColor="#808080"
               />
        </RelativeLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#000000"
                    android:layout_margin="10dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/time_to_go_pic"
                android:src = "@drawable/car"
                android:layout_width="64"
                android:layout_height="64"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/time_to_go"
                android:text="@string/time_to_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below = "@id/time_to_go_pic"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>


    <View
        android:id="@+id/shop_name_separator"
        android:layout_below="@id/firstLine"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <TextView

        android:id="@+id/building_type"
        android:text="@string/building_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop_name_separator"
        android:paddingTop="20dp"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/work_hours"
        android:text="@string/work_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/building_type"
        android:paddingTop="3dp"
        android:textSize="14sp"
        android:textColor="#808080"
        />
    <TextView
        android:id="@+id/address"
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/work_hours"
        android:paddingTop="3dp"
        android:paddingBottom="20dp"
        android:textSize="14sp"
        android:textColor="#808080"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:text = "@string/action_call"
        android:drawableTop="@drawable/phone"/>
</RelativeLayout>
